Added better clear datasheet

--- a/code/Capstone_Default_Clients.ipynb
+++ b/code/Capstone_Default_Clients.ipynb
@@ -25,9 +25,11 @@
     "\n",
     "2. **[Exploratory data analysis](#eda)**: \n",
     "\n",
-    "    Understanding the *business underlying objective is important* as much as good modelling. Therefore, we must code EDA first. In this part of the notebook we can see, firstly, the main datatypes and the presence of missing values and, secondly, the different impact of categorical and numerical variables over the label we would like to predict (i.e. default). \n",
+    "    Understanding the *business underlying objective is important* as much as good modelling. Therefore, we must code EDA first. In this part of the notebook we can see, firstly, the main datatypes and the presence of missing values and, secondly, the different impact of categorical and numerical variables over the label we would like to predict (i.e. default).\n",
     "    \n",
-    "    We must recall that out dataset is the \"Default Credit Card Clients\" that can be downloaded [here](https://archive.ics.uci.edu/dataset/350/default+of+credit+card+clients). ***This dataset is very small yet complete and it has no missing values and categorical variables are already converted into numerical ones.***\n",
+    "    Getting a *deep* overview of the data is ***key*** in any project. Therefore, we discuss [here](#correlogram) all possible correlations highlights between the variables and the target *default* one as well as we discussed possible ***data biases*** [here](#biases) in the data due to lack of balance between features.\n",
+    "    \n",
+    "    We must recall that out dataset is the \"Default Credit Card Clients\" that can be downloaded [here](https://archive.ics.uci.edu/dataset/350/default+of+credit+card+clients). ***This dataset is very small yet complete and it has no missing values in it.***\n",
     "    \n",
     "    Within this section we perform **balancing among SMOTE, oversampling and undersampling.** The objective here is to use a single dataset in which the minority class (i.e. the client defaulted) will be having the same weight\" in the dataset (i.e. 50% among both of the two classes, default and not-default)<br><br>\n",
     "\n",
@@ -37,13 +39,13 @@
     "    >- define and *objective* function and a *parameters optimisation space*\n",
     "    >- perform ***Bayes Optimisation*** on the previous ojective function to extract bets model-related parameters\n",
     "    >- fit and predict on our specific model (e.g. Logistic Regression) with best Bayes parameters found\n",
-    "    >- calculate and plot performance report <br><br>\n",
+    "    >- calculate and plot performance report based on [ROC AUC](https://developers.google.com/machine-learning/crash-course/classification/roc-and-auc?hl=it) binary classification metric<br><br>\n",
     "\n",
     "4. **[Conclusions](#conclusions)**:\n",
     "\n",
     "    Each model has its own performance metrics conclusion analysis. At the end of the notebook, on AUC, accurancy and F1-score we have put in comparison all the trained models.\n",
     "    \n",
-    "    At the same time, we propose here some points for future exploration and improvements to the notebook.<br><br>\n",
+    "    At the same time, *we propose [here](#considerations) some points for future exploration and improvements to the notebook*.<br><br>\n",
     "\n",
     "5. **[Appendix](#appendix)**: \n",
     "\n",
@@ -68,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 3,
    "id": "5c47284d",
    "metadata": {},
    "outputs": [],
@@ -100,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "7b8c89f8",
    "metadata": {},
    "outputs": [],
@@ -123,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "171f1eb1",
    "metadata": {},
    "outputs": [],
@@ -159,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "3145e97d",
    "metadata": {},
    "outputs": [],
@@ -191,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "1897dc3c",
    "metadata": {},
    "outputs": [],
@@ -215,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 8,
    "id": "7e568b88",
    "metadata": {},
    "outputs": [],
@@ -238,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 9,
    "id": "82ba6306",
    "metadata": {},
    "outputs": [],
@@ -285,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "1ae353e0",
    "metadata": {},
    "outputs": [],
@@ -296,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "id": "67012286",
    "metadata": {},
    "outputs": [
@@ -304,7 +306,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Main path for this project is /Users/andrea/Documents/Github Repositories/Capstone\n"
+      "Main path for this project is D:\\Documenti\\Github\\Capstone\n"
      ]
     }
    ],
@@ -315,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "id": "e13eb891",
    "metadata": {},
    "outputs": [],
@@ -328,7 +330,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
+   "id": "6dc650b6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "MARRIAGE\n",
+       "2    15964\n",
+       "1    13659\n",
+       "3      323\n",
+       "0       54\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "credit_data.MARRIAGE.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "id": "a918a4e1",
    "metadata": {},
    "outputs": [
@@ -638,13 +666,14 @@
    "id": "b2416f5e",
    "metadata": {},
    "source": [
+    "<a class=\"anchor\" id=\"correlogram\"></a>\n",
     "Fortunately, we do not have a lot of features so we can plot a correlogram like the one here above.\n",
     "\n",
     "**We notice at least three things out of the correlgram above** (that could be use by the analyst to start thinking it's necessary to apply a model):\n",
     "\n",
     "1. The \"Pay\" variable have the **strongest linear correlation with the default target label we would like to predict**: basically, it seems that the more a client has not paid the previous month, the more it is likely that he/she is not going to pay the current month. From PAY_6 having correlation equal to 0.19 till PAY_1 having correlation 0.32 the value increases\n",
     "2. *No personal categorical feature (sex, age, education, marriage) has a remarkable impact on the target variable*\n",
-    "3. Clearly, all \"PAY\" and \"BILL_AMT\" variables are strongly correlated to each other forming two correlations clouds in the center of the correlogram."
+    "3. Clearly, all **PAY** and **BILL_AMT** variables are strongly correlated to each other forming two correlations clouds in the center of the correlogram."
    ]
   },
   {
@@ -944,6 +973,55 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3fe415f3",
+   "metadata": {},
+   "source": [
+    " "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b212aa60",
+   "metadata": {},
+   "source": [
+    "<a class=\"anchor\" id=\"biases\"></a>\n",
+    "\n",
+    "Given all above chart, **expecially for the categorical variable named EDUCATION** we notice that categories *4 and 5 and 6* (i.e. others and all the unknown) are clearly a minority class which may couse **biases in future model usages due to the fact that the model had no historical data to be train on!**\n",
+    "\n",
+    "At the same time, this historical lack of data from which the model learns *partially* could be applied to SEX, MARRIAGE feature, too.\n",
+    "\n",
+    "To amend this, the data scientist can perform one of the following:\n",
+    "\n",
+    "##### Data Preprocessing\n",
+    "\n",
+    "1. **Resampling Techniques**:\n",
+    "    - **Oversampling**: create synthetic samples of the minority class (single people in this case) using algorithms like SMOTE (Synthetic Minority Over-sampling Technique).\n",
+    "    - **Undersampling**: randomly remove instances from the majority class to balance out the ratio.\n",
+    "  \n",
+    "2. **Weighted Sampling**: assign higher weight to the minority class during random sampling.\n",
+    "\n",
+    "\n",
+    "##### Data Augmentation\n",
+    "\n",
+    "1. **Feature Engineering**: create new features that can capture the characteristics of the single people, which may help in generalizing the model.\n",
+    "  \n",
+    "2. **Bootstrapping**: generate new subsets of your data by sampling with replacement, then assess credit risk on each subset. Use voting or averaging for the final prediction.\n",
+    "\n",
+    "\n",
+    "In the following part of this Jupyter Notebook, we are going to perform sampling to amend this issue.\n",
+    "Please note that, ***in real cases***, the lacking data is simply omitted from the dataset and during the onboarding phase of the client this fileds are *mandatory* so that there are limited *distortions* (i.e. ***biases***) inside the final dataset !"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d1e06592",
+   "metadata": {},
+   "source": [
+    " "
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "53f23fd0",
    "metadata": {},
    "source": [
@@ -1057,6 +1135,22 @@
     "    sns.barplot(x=feature, y='default', data=credit_data)\n",
     "    plt.title(f'Default Rate by {feature}')\n",
     "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "72c7a00d",
+   "metadata": {},
+   "source": [
+    " "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8393d946",
+   "metadata": {},
+   "source": [
+    " "
    ]
   },
   {
@@ -3039,11 +3133,11 @@
    "id": "3ac57916",
    "metadata": {},
    "source": [
-    "**Possible future considerations and improvements:**\n",
+    "**Possible future considerations and improvements:** <a class=\"anchor\" id=\"considerations\"></a>\n",
     "    \n",
     "1. We performed all the computations on a balanced dataset using **undersampling**: what about SMOTE and oversampling ? What is we will be adding [ADASYN](https://medium.com/@ruinian/an-introduction-to-adasyn-with-code-1383a5ece7aa), too ? \n",
-    "2. What if we added neural networks ?\n",
-    "3. It is true that Random Forest is outperforming but, since it has a small yet **very constant** percentage improvement compared to all the models, will it be the case to **lose \"interpretability\" over \"performance\" ?** Logistic Regression could be more easy to explain.\n",
+    "2. What if we added neural networks ? Does it make any sense with *binary classification problem* ?\n",
+    "3. It is true that Random Forest is outperforming but, since it has a small yet **very constant** percentage improvement compared to all the models, will it be the case to **lose \"interpretability\" over \"performance\" ?** Logistic Regression could be more easy to explain to *major stakeholder* and it is **frequently used** in the credit risk assessment area.\n",
     "4. Given the chart here above about Random Forest feature importance, **what if applying a PCA decomposition on top we could improve the performance ?** It look like personal related infos (e.g. marriage or sex) are not that relevant to the algorithm so if PCA confirms the coudl be excluded."
    ]
   },
